[package]
name = "my-lulu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyberon = { git = "https://github.com/TeXitoi/keyberon" }
usb-device = "0.2.0"
panic-halt = "0.2.0"
rp2040-hal = { version = "0.7", features=["rt", "critical-section-impl"] }
rp2040-boot2 = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
embedded-hal = "0.2.7"
fugit = "0.3.6"
ws2812-pio = "0.5.0"
smart-leds = "0.3.0"
ssd1306 = "0.7.1"
