[package]
name = "my-lulu"
version = "0.1.0"
edition = "2021"

[dependencies]
keyberon = { git = "https://github.com/TeXitoi/keyberon" }
usb-device = "0.3"
panic-halt = "0.2"
rp2040-hal = { version = "0.10", features=["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
embedded-hal = "1.0"
fugit = "0.3"
ws2812-pio = { git = "https://github.com/liamrosenfeld/ws2812-pio-rs" } # until embedded-hal is updated
smart-leds = "0.4"
ssd1306 = "0.7"
